# blank-project

./: CMakeLists.txt  README.md  game_scene.cpp  game_scene.h  main.cpp
assets/: shader.vert
src/: wase-engine-sample.cpp
src/scenes/: main_scene.h  second_scene.h
